fixed li
List items were stretched too far on mobile. Updated for better appearance.

--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ ul {
 }
 
 li {
-  padding: 3vh 3vw;
-  margin: 3vh 9vw;
+    padding: 1vh 3vw;
+    margin: 3vh 9vw;
 }
 
 footer {
